compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_unknown_variant_constructor_pattern.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/unknown_variant_constructor_pattern.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown variant constructor
   ╭─[tests/fixtures/diagnostics/types/unknown_variant_constructor_pattern.ml:6:5]
 5 │   dbg(match value {
 6 │     Missing(x) -> x,
   ·     ─────┬────
   ·          ╰── `Missing` is not a known constructor
 7 │     _ -> 0
   ╰────
  help: declare the constructor with a top-level `type` declaration
