compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_while_condition_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 4999
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/while_condition_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × expression must be Bool
   ╭─[tests/fixtures/diagnostics/types/while_condition_mismatch.ml:2:3]
 1 │     fn main() {
 2 │ ╭─▶   while 1 {
 3 │ │       dbg("never")
 4 │ ├─▶   };
   · ╰──── this while condition has type `i64`
 5 │       dbg("done")
   ╰────
  help: use a Bool expression here
